# searchEngine

./: CMakeLists.txt  README.md  answer.json  config.json  requests.json  searchEngine.h
include/: ConverterJSON.h  InvertedIndex.h  searchEngine.h
resources/: 001.txt  002.txt  003.txt  004.txt  005.txt  1.txt  2.txt  3.txt  4.txt  5.txt
src/: ConverterJSON.cpp  InvertedIndex.cpp  searchEngine.cpp
tests/: testConverterJSON.h  testInvertedIndex.h
